# trades

./: .gitignore  DeploySite.bat  LICENSE.txt  README.md  deploy.ps1  deploy.sh  main.py  nse_bse_data_fetcher.py  pyproject.toml  pytest.ini  requirements.txt  run_app.bat  setup.cfg  setup.py  yahoo.py
