[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pmClient"
version = "0.1.0"
description = "Paytm Money API client package"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["paytmmoney", "trading", "api", "pmclient"]
authors = [
  { name = "Hitesh Vidhani" }
]
dependencies = [
  "requests>=2.28.0",
  "httpx~=0.23.3",
  "websocket-client~=1.5.0",
]

[project.urls]
Homepage = "https://github.com/jvxalgo-netizen/Jvx"

[tool.setuptools]
packages = ["pmClient"]
